[package]
name = "simulate_evm"
version = "0.1.0"
edition = "2021"

[features]
full = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
actix-web = {version = "4",features = ["rustls-0_21"]}
openssl = { version = "0.10", features = ["vendored"] }
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
alloy = {version="0.5.2",features=["full","eip712","signers","k256","dyn-abi"]}
tokio = { version = "*", features = ["full"] } # for our async runtime
serde_json = "1.0"
revm-trace = "2.0.3"
futures = "0.3"
chrono = "0.4.40"
actix-cors = "0.6.4"
